--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.42.3",
+    "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
